--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ eth-rlp==0.2.1
 eth-typing==2.3.0
 eth-utils==1.10.0
 fastapi==0.70.1
+fastapi-utils==0.2.1
 filelock==3.7.1
 frozenlist==1.3.0
 greenlet==1.1.2
