--- a/requirements.txt
+++ b/requirements.txt
@@ -113,7 +113,7 @@ sniffio==1.2.0
 SQLAlchemy==1.4.29
 starkbank-ecdsa==2.0.3
 starlette==0.16.0
-sympy==1.6
+# sympy==1.6
 toml==0.10.2
 toolz==0.11.2
 tortoise-orm==0.19.0
