--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ cytoolz==0.11.2
 dateparser==1.0.0
 distlib==0.3.4
 dnspython==2.1.0
-dydx-v3-python==1.6.0
+# dydx-v3-python==1.6.0
 # ecdsa==0.16.0
 email-validator==1.1.3
 eth-abi==2.1.1
