--- a/requirements.txt
+++ b/requirements.txt
@@ -119,8 +119,8 @@ toolz==0.11.2
 tortoise-orm==0.19.0
 tox==3.13.2
 twilio==7.9.2
-Twisted==22.4.0
-twisted-iocpsupport==1.0.2
+# Twisted==22.4.0
+# twisted-iocpsupport==1.0.2
 txaio==22.2.1
 typing_extensions==4.0.1
 tzdata==2022.1
